fix authen error ,  sample cvode , improve remove logic ,e,,g
