# src/res/assign/assign.controller.ts
@@ -25,9 +25,8 @@ export const assignMemberToTask = async (req: Request, res: Response, next: Next
       timestamp: new Date().toISOString(),
       path: req.originalUrl
     })
-    // eslint-disable-next-line @typescript-eslint/no-explicit-any
-  } catch (error: any) {
-    return next({ statusCode: error.statusCode, message: error.message })
+  } catch (error: unknown) {
+    return next(error)
   }
 }
 
@@ -37,26 +36,27 @@ export const getAssignInCard = async (req: Request, res: Response, next: NextFun
 
     const data = await handleGetAssignInCard(taskId)
 
-    return res.status(200).json(data)
-    // eslint-disable-next-line @typescript-eslint/no-explicit-any
-  } catch (error: any) {
-    return next({ statusCode: error.statusCode, message: error.message })
+    return res.status(200).json({
+      message: 'Success',
+      data,
+      statusCode: 200,
+      timestamp: new Date().toISOString(),
+      path: req.originalUrl
+    })
+  } catch (error: unknown) {
+    return next(error)
   }
 }
 
 export const deleteAssign = async (req: Request, res: Response, next: NextFunction) => {
   const { taskId } = req.params
-
   const { memberId, ownerId } = req.body
 
   try {
-    await handleDeleteAssign({
-      memberId,
-      ownerId,
-      taskId
-    })
-    // eslint-disable-next-line @typescript-eslint/no-explicit-any
-  } catch (error: any) {
-    return next({ statusCode: error.statusCode, message: error.message })
+    await handleDeleteAssign({ memberId, ownerId, taskId })
+
+    return res.status(204).send()
+  } catch (error: unknown) {
+    return next(error)
   }
 }
